added likes logic and table in DB
